--- a/HW6 task1-2/HW6_task1_2_AB_testing.ipynb
+++ b/HW6 task1-2/HW6_task1_2_AB_testing.ipynb
@@ -46,7 +46,7 @@
         "t_new = 25*1.1 # новый таймспент на юзера\n",
         "sd = 156 # стандартное отклонение\n",
         "alpha = 0.05 # уровень значимости\n",
-        "beta = 0.2 # вероятности ошибки"
+        "beta = 0.2 # вероятность ошибки"
       ],
       "metadata": {
         "id": "fJtkJpyyM4G-"
@@ -128,7 +128,7 @@
         "b_r_now = 0.4 # текущее значение bounce_rate\n",
         "b_r_new = 0.4*(1-0.2) # новое значение bounce_rate\n",
         "alpha = 0.05 # уровень значимости\n",
-        "beta = 0.2 # вероятности ошибки"
+        "beta = 0.2 # вероятность ошибки"
       ],
       "metadata": {
         "id": "OmGOFcE-KtJ3"
