--- a/HW8 task1/HW8_task1_AB_testing.ipynb
+++ b/HW8 task1/HW8_task1_AB_testing.ipynb
@@ -2282,7 +2282,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Расчет мощности для raw неочищенные (первоначальные) данные"
+        "Расчет мощности для первоначальных данных - raw"
       ],
       "metadata": {
         "id": "nNFTIWF75WTg"
@@ -2328,7 +2328,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Расчет мощности для очищенных данные - unic"
+        "Расчет мощности для очищенных данных - unic"
       ],
       "metadata": {
         "id": "ryGxssu35nVb"
